...
  "backups_toggle_envoy_mobile_wallet_key": "Mobile Wallet Key",
  "backups_viewMobileWalletSeed": "View Mobile Wallet Seed",
  "bottomNav_accounts": "Accounts",
  "bottomNav_activity": "Activity",
  "bottomNav_devices": "Devices",
  "bottomNav_learn": "Learn",
  "bottomNav_privacy": "Privacy",
  "bottomNav_transfer": "Transfer",
  "btcpay_connection_modal_expired_subheading": "This voucher expired on {period}.\n\n\nPlease contact the issuer with any voucher-related questions.",
...
  "coincontrol_subsat_selectorWarning": "Less than 1 sat/vb is an advanced feature. ",
  "coincontrol_switchActivity": "Activity",
  "coincontrol_switchTags": "Tags",
  "coincontrol_txDetail_ReviewTransaction": "Review Transaction",
  "coincontrol_txDetail_cta1_passport": "Sign with Passport",
...
  "coincontrol_tx_detail_amount_to_sent": "Amount to send",
  "coincontrol_tx_detail_change": "Change received",
  "coincontrol_tx_detail_cta1": "Send Transaction",
  "coincontrol_tx_detail_cta2": "Edit Transaction",
  "coincontrol_tx_detail_custom_fee_cta": "Confirm Fee",
...
  "coincontrol_tx_detail_feeChange_information": "Updating your fee may change your coin selection. Please review afterwards.",
  "coincontrol_tx_detail_fee_alert": "Fee is {number}% of total amount",
  "coincontrol_tx_detail_fee_custom": "Custom",
  "coincontrol_tx_detail_fee_fast": "Fast",
  "coincontrol_tx_detail_fee_faster": "Faster",
...
  "coincontrol_tx_detail_newFee": "New Fee",
  "coincontrol_tx_detail_no_change": "No change",
  "coincontrol_tx_detail_passport_cta2": "Cancel Transaction",
  "coincontrol_tx_detail_passport_subheading": "By canceling you will lose all transaction progress.",
  "coincontrol_tx_detail_subheading": "Confirm the transaction details are correct before sending.",
...
  "coindetails_overlay_confirmationIn_week": "week",
  "coindetails_overlay_confirmationIn_weeks": "weeks",
  "coindetails_overlay_confirmation_boost": "Boost",
  "coindetails_overlay_confirmations": "Confirmations",
  "coindetails_overlay_date": "Date",
...
  "component_12WordSeed": "12 Word Seed",
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
...
  "component_learnMore": "Learn more",
  "component_minishield_buy": "Buy",
  "component_next": "Next",
  "component_no": "No",
  "component_notificationText": "Issue establishing Tor connectivity",
...
  "component_resetSorting": "Reset sorting",
  "component_retry": "Retry",
  "component_save": "Save",
  "component_searching": "Searching",
  "component_skip": "Skip",
...
  "privacy_node_configure_noConnectionEsplora": "Could not connect to Esplora server.",
  "privacy_node_connectedTo": "Connected to",
  "privacy_node_connection_couldNotReach": "Couldn't reach node.",
  "privacy_node_connection_localAddress_warning": "Even with ‘Improved Privacy’ active, Envoy cannot prevent interference by compromised devices on your local network.",
  "privacy_node_nodeAddress": "Enter your node address",
  "privacy_node_nodeType_foundation": "Foundation (Default)",
  "privacy_node_nodeType_personal": "Personal Node",
  "privacy_node_nodeType_publicServers": "Public servers",
  "privacy_node_title": "Node",
...
  "receive_tx_list_receive": "Receive",
  "receive_tx_list_scan": "Scan",
  "receive_tx_list_send": "Send",
  "receive_tx_list_transfer": "Transfer",
  "receive_verifyModalCore_content": "Navigate to {AccountName} on Passport, choose ‘Account Tools’ then ‘Verify Address’ and scan the QR code below.",
...
  "replaceByFee_cancel_fail_heading": "Your transaction could not be canceled",
  "replaceByFee_cancel_overlay_modal_cancelationFees": "Cancellation Fee",
  "replaceByFee_cancel_overlay_modal_proceedWithCancelation": "Proceed with Cancellation",
  "replaceByFee_cancel_overlay_modal_receivingAmount": "Receiving Amount",
  "replaceByFee_cancel_overlay_modal_subheading": "Replace the unconfirmed transaction with one that contains a higher fee and sends the funds back to your wallet.",
...
  "replaceByFee_coindetails_overlayNotice": "Boost and Cancel functions will be available after transaction has finished being broadcast.",
  "replaceByFee_coindetails_overlay_boost": "Boost",
  "replaceByFee_coindetails_overlay_modal_heading": "Boost Transaction",
  "replaceByFee_coindetails_overlay_modal_subheading": "Increase the fee attached to your transaction to speed up confirmation time.",
  "replaceByFee_edit_transaction_requiredAmount": "Required to Boost",
...
  "send_keyboard_amount_insufficient_funds_info": "Insufficient Funds",
  "send_keyboard_amount_too_low_info": "Amount too low",
  "send_keyboard_enterAddress": "Enter address",
  "send_keyboard_send_max": "Send Max",
  "send_keyboard_to": "To:",
...
  "stalls_before_sending_tx_scanning_broadcasting_fail_subheading": "Please check your connection and try again",
  "stalls_before_sending_tx_scanning_broadcasting_fail_subsat_subheading": "Please ensure sure the connected node is able to broadcast transactions containing  sub-sat fee rates.",
  "stalls_before_sending_tx_scanning_broadcasting_success_heading": "Your transaction was successfully sent",
  "stalls_before_sending_tx_scanning_broadcasting_success_subheading": "Review the details by tapping on the transaction from the account details screen.",
  "stalls_before_sending_tx_scanning_heading": "Sending transaction",
...
