...
              if (widget.additionalButtons)
                Row(
                  children: [
                    const SizedBox(width: EnvoySpacing.medium1),
                    if (widget.isLoading ?? false)
                      Semantics(
                        label: 'Loading',
                        child: const SizedBox(
                          width: EnvoySpacing.medium1,
                          height: EnvoySpacing.medium1,
                          child: CircularProgressIndicator(
                            strokeWidth: 1.5,
                            color: EnvoyColors.textPrimary,
...
