...
          ),
        ),
        EnvoyScaffold(
          topBarLeading: Padding(
            padding: const EdgeInsets.all(EnvoySpacing.xs),
            child: Semantics(
              identifier: 'psbt_back_button',
              child: IconButton(
                icon: const Icon(
                  Icons.chevron_left,
                  color: Colors.black,
                ),
                onPressed: () {
...
