...
                            }
                          }),
                        ),
                      ),
                    if (widget.onPrimaryButtonTap != null)
                      Semantics(
                        identifier: 'PopUp Primary Button',
                        container: true,
                        button: true,
                        excludeSemantics: true,
                        child: EnvoyButton(widget.primaryButtonLabel,
                            type: EnvoyButtonTypes.primary, onTap: () {
                          widget.onPrimaryButtonTap?.call(context);
...
