...
                  child: Container(
                    decoration: BoxDecoration(
                      color: EnvoyColors.surface4,
                      borderRadius: BorderRadius.circular(EnvoySpacing.small),
                    ),
                    child: Semantics(
                      identifier: 'tx_note_input',
                      child: TextFormField(
                        maxLines: 1,
                        maxLength: 34,
                        controller: _textEditingController,
                        textAlign: TextAlign.center,
                        textInputAction: TextInputAction.done,
...
