# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (23) enableTorAndCheckShield
appId: com.foundationdevices.envoy
---

# go to privacy
- tapOn: Privacy

# enable tor

- tapOn: |-
    Improved
    Privacy

# check if Tor connects via top bar Shield icon
- extendedWaitUntil:
    visible: "PRIVACY connected"
    timeout: 300000 # wait for 5 min

# hack to wait 30 sec
- swipe:
    start: "50%, 5%"
    end: "50%, 5%"
    duration: 30000

# check if Tor shield is still blue
- assertVisible: "PRIVACY connected"

# if it is connected turn it off
- tapOn: |-
    Better 
    Performance

# check if it is OFF via shield
- extendedWaitUntil:
    visible: "PRIVACY off"
    timeout: 300000 # wait for 5 min

# go back to home
- tapOn: Accounts
