# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (27) boostScreen
appId: com.foundationdevices.envoy
---
#      //const hotSignetReceiveAddress =
#      //    'tb1q94lefpc0sfeg623yjy5m0xtm05cpyq85r8f6er';
#      // TODO: fill this wallet if there is no money from here https://signet257.bublina.eu.org/
#      // TODO: when getting more coins you need to wait for the transaction confirmation before running the tests!!!

# go to Hot Signet wallet
- scroll

- tapOn:
    id: account_card_Mobile Wallet_hot_signet

# send a tx
- tapOn: Send

# check if it is in sats
# cycle to sats if not already there
# cycle order: sats → fiat → btc → sats

# if on btc, tap once to get to sats
- runFlow:
    when:
      visible:
        id: "amount_display btc"
    commands:
      - tapOn:
          id: "amount_display btc"
          # refresh send
      - tapOn:
          id: hamburger_menu
      - tapOn: Send

# if on fiat, tap twice to get to sats (fiat → btc → sats)
- runFlow:
    when:
      visible:
        id: "amount_display fiat"
    commands:
      - tapOn:
          id: "amount_display fiat"
      - tapOn:
          id: "amount_display btc"
          # refresh send
      - tapOn:
          id: hamburger_menu
      - tapOn: Send

# enter address
- tapOn: Enter address
- inputText: "tb1q94lefpc0sfeg623yjy5m0xtm05cpyq85r8f6er"

- tapOn: Back

# enter amount
- tapOn: "5"
- tapOn: "6"
- tapOn: "7"

- tapOn: Confirm

# wait the app to enter Staging
- extendedWaitUntil:
    visible: |-
      Your transaction is ready 
      to be sent
      Confirm the transaction details are correct before sending.
    timeout: 60000 # wait for 1 min

# lower the fee so the tx does not confirm so fast!!!!
- tapOn:
    id: "envoy_icon_chevron_right"

- tapOn: "Custom"

  # swipe far to the right to decrease fee a lot
- repeat:
    times: 11
    commands:
      - swipe:
          start: "10%, 85%"
          end: "95%, 85%"
          duration: 800

- tapOn: "Apply"

- tapOn: Send Transaction
- tapOn: Save

# wait for tx confirmation
- extendedWaitUntil:
    visible: Your transaction was successfully sent
    timeout: 120000 # wait for 2 min

- tapOn: Continue

# go to tags
- tapOn: Activity

# lock all coins in the Untagged
- tapOn: coin_lock_icon-unlocked

# lock
- tapOn:
    id: PopUp Primary Button

# wait for the lock to lock
- extendedWaitUntil:
    visible: coin_lock_icon-locked
    timeout: 300000 # wait for 5 min

- tapOn: Tags

- tapOn: |-
    Sent
    Awaiting confirmation

# wait for the boost to load
- extendedWaitUntil:
    visible: |-
      boost button-ready
      Boost
    timeout: 180000 # wait for 3 min

# try to boost
- tapOn: |-
    boost button-ready
    Boost

# check it the cannot boost popup shows
- extendedWaitUntil:
    visible:
      id: envoy_icon_alert
    timeout: 120000
- tapOn:
    id: PopUp Primary Button

# go back and unlock all coins for the next test
- tapOn: Back
- tapOn: Activity

# unlock all
- tapOn: coin_lock_icon-locked

- tapOn:
    id: PopUp Primary Button

# wait for the lock to unlock
- extendedWaitUntil:
    visible: coin_lock_icon-unlocked
    timeout: 120000 # wait for 2 min

##################### Simple RBF and Cancel test (ENV-2106)

# go back to tx
- tapOn: Tags

# enter the sent tx
- tapOn: |-
    Sent
    Awaiting confirmation

# make sure it is boostable
- extendedWaitUntil:
    visible: |-
      boost button-ready
      Boost
    timeout: 120000

# and cancable
- extendedWaitUntil:
    visible: |-
      cancel button-ready
      Cancel Transaction
    timeout: 120000

# tap boost
- tapOn: |-
    boost button-ready
    Boost

# boost tx
- tapOn: Continue
- extendedWaitUntil:
    visible: Boost Transaction
    timeout: 120000
- tapOn: Boost Transaction
- tapOn: Continue

# check the boosted tx
- tapOn: |-
    Boosted
    Awaiting confirmation

# make sure it is boostable
- extendedWaitUntil:
    visible: |-
      boost button-ready
      Boost
    timeout: 120000

# and cancable
- extendedWaitUntil:
    visible: |-
      cancel button-ready
      Cancel Transaction
    timeout: 120000

# Go ahead and cancel the transaction
- tapOn: |-
    cancel button-ready
    Cancel Transaction
- tapOn: Proceed with Cancellation
- tapOn: Continue

- extendedWaitUntil:
    visible: "Canceling\nAwaiting confirmation"
    timeout: 300000 # 5 min

- tapOn: |-
    Canceling
    Awaiting confirmation

# Check that no Boost or Cancel options are displayed
- assertNotVisible: Boost
- assertNotVisible: Cancel Transaction

# go back to home
- tapOn: Back
- tapOn:
    id: hamburger_menu
